--- a/pom.xml
+++ b/pom.xml
@@ -5,22 +5,18 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.5.6</version>
+		<version>2.7.1</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>com.talentyco</groupId>
-	<artifactId>project06-validation-springboot</artifactId>
+	<groupId>cl.springs</groupId>
+	<artifactId>book-java-the_complete_coding_interview_guide_in_java</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>project06-validation-springboot</name>
-	<description>Proyectos de Springboot validation</description>
+	<name>book-java-the_complete_coding_interview_guide_in_java</name>
+	<description>Book The Complete Coding Interview Guide in Java</description>
 	<properties>
-		<java.version>11</java.version>
+		<java.version>18</java.version>
 	</properties>
 	<dependencies>
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-data-jpa</artifactId>
-		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-thymeleaf</artifactId>
@@ -41,8 +37,8 @@
 			<optional>true</optional>
 		</dependency>
 		<dependency>
-			<groupId>com.h2database</groupId>
-			<artifactId>h2</artifactId>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
 			<scope>runtime</scope>
 		</dependency>
 		<dependency>
